# magnetron

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  autograd2.dot  format.py  generate.py  main.py  pyproject.toml  ruff.toml
benchmark/: CMakeLists.txt  benchmarks.cpp  linux_prepare_perf.sh  prepare_system.sh  profile.cpp
benchmark/python/: bench_all.py  bench_square_matmul.py  bench_tool.py
cmake/: accelerate.cmake  allocator.cmake  arch.cmake  blas_specialization.cmake  blas_tune.cmake  comflags.cmake  compiler_config.cmake  cuda.cmake  lib.cmake  openblas.cmake
docs/: mag-file-format.md
examples/: xor.py
fuzzer/: CMakeLists.txt  fuzzer.cpp
magnetron/: mag_cpu_blas.h  magnetron.c  magnetron.h  magnetron_aux.c  magnetron_cpu.c  magnetron_cpu_blas.h  magnetron_cpu_blas.inl  magnetron_cpu_blas_amd64_avx.c  magnetron_cpu_blas_amd64_avx2.c  magnetron_cpu_blas_amd64_avx512f.c  magnetron_cpu_blas_amd64_sse41.c  magnetron_cpu_blas_amd64_sse42.c  magnetron_cpu_blas_amd64_v2.c  magnetron_cpu_blas_amd64_v2_5.c  magnetron_cpu_blas_amd64_v3.c  magnetron_cpu_blas_amd64_v4.c  magnetron_cpu_blas_amd64_v4_5.c  magnetron_cpu_blas_amd64_znver4.c  magnetron_cpu_blas_arm64_82.c  magnetron_cpu_blas_arm64_v8_2.c  magnetron_cpu_blas_arm64_v9.c  magnetron_cpu_blas_fallback.c  magnetron_cuda.cu  magnetron_cuda.cuh  magnetron_device_registry.c  magnetron_internal.h  magnetron_ops.c
python/: .gitignore  README.md  bing_gen.py  optional-requirements.txt  pyproject.toml  requirements.txt  ruff.toml  setup.py
python/benchmarks/: add.py  bench.py  bench_all.py  bench_tool.py  bench_various_matmul.py
python/benchmarks/flops/: add_mag.py  add_numpy.py  mm_mag.py  mm_numpy.py
python/benchmarks/magnetron_vs_numpy/: add.py
python/chat/: server.py
python/chat/static/css/: style.css
python/chat/static/js/: script.js
python/chat/templates/: index.html
python/dataset_converter/: converter.py  out.mag
python/dataset_explorer/: explorer.py
python/docs/: conf.py  index.rst
python/examples/: gpt2.py  mnist.py  utils.py  xor.py  xor_0.dot  xor_tiny.py
python/examples/gpt2/: gpt2.py
python/examples/inference/: mnist.py
python/examples/inference/mnist_interactive/: manage.py
python/examples/inference/mnist_interactive/mnist_interactive/: settings.py  urls.py  views.py
python/examples/inference/mnist_interactive/templates/: index.html
python/examples/inference/mnist_simple/: train.py
python/examples/interactive/: index.html
python/examples/interactive/llm_chat/: manage.py
python/examples/interactive/llm_chat/llm_chat/: settings.py  urls.py  views.py
python/examples/interactive/llm_chat/llmchat_backend/: apps.py  views.py
python/examples/interactive/llm_chat/templates/: index.html
python/examples/interactive/mnist_interactive/: README.md  manage.py
python/examples/interactive/mnist_interactive/mnist_interactive/: asgi.py  image_utils.py  settings.py  urls.py  utils.py  views.py  wsgi.py
python/examples/interactive/mnist_interactive/templates/: index.html
python/examples/research/: approx.py  approx_gelu.py  approx_silu.py  approx_softmax.py  approx_tanh.py  matmul_numpy.py  matmul_ref.py  matmul_wl.py
python/examples/simple/: cuda.py  mnist.py  mnist_dataset.py  perceptron.py  requirements.txt  train.py  xor.py
python/magnetron/: __init__.py  _bootstrap.py  _core.py  _ffi_cdecl_generated.py
python/magnetron/nn/: loss.py
python/magnetron_framework/: bing_gen.py  build_wheel.bat  build_wheel.sh  install_wheel_local.bat  install_wheel_local.sh  requirements.txt  setup.py
python/magnetron_framework/magnetron/: __init__.py  _ffi_cdecl_generated.py  _lib_loader.py  core.py  layer.py  model.py  models.py  module.py  optim.py
python/magnetron_framework/wavelet.egg-info/: PKG-INFO  SOURCES.txt
python/magnetron_viewer/: main.py
python/magnetron_viewer/icons/: icons_credits.txt
python/research/: approx.py  approx_gelu.py  approx_silu.py  approx_softmax.py  approx_tanh.py  matmul_mag.py  matmul_ref.py
python/src/magnetron/: _bootstrap.py  _core.py  _ffi_cdecl_generated.py  _lib_loader.py  core.py  io.py  module.py  nn.py  optim.py
python/src/magnetron/nn/: activations.py  layers.py  module.py
python/tests/: __init__.py  autograd.py  bool_tensor.py  context.py  fill.py  int_tensor.py  io.py  math_ops.py  network_xor.py  tensor.py  tensor_fill.py  tensor_ops1.py  tensor_ops2.py  tensor_ops3.py  tests.py  xor_nn.py  xor_nn_mag.dot
research/: chebyshev.jl  magnetron_arch.drawio
test/: CMakeLists.txt  compute_cpu.cpp  core.cpp  ctx.cpp  graph_static.cpp  image.cpp  invariant_proof.cpp  prelude.hpp  sanity_test.c  santiy_test.c  storage.cpp  tensor.cpp  threading.cpp
test/googletest/googletest/: CMakeLists.txt
test/python/: autograd.py  base_ops.py  context.py  io.py  math_ops.py  matmul.py  xor_nn_manual.py
test/unit/: CMakeLists.txt  allocators.cpp  autograd.cpp  compute_cpu.cpp  core.cpp  ctx.cpp  cuda.cpp  e5m10.cpp  f16_cvt.cpp  fmt.sh  graph_dynamic.cpp  graph_static.cpp  image.cpp  ivdiv_proof.cpp  network.cpp  prelude.hpp  storage.cpp  tensor.cpp  tensor_init_operators_cpu.cpp  tensor_matmul_cpu.cpp  tensor_operations_cpu.cpp  tensor_operators_cpu.cpp  tensor_ops_1_cpu.cpp  tensor_ops_mm_cpu.cpp  threading.cpp  type_cvt.cpp
test/unit_old/: .clang-format  allocators.cpp  autograd.cpp  e5m10.cpp  graph_static.cpp  network.cpp  prelude.hpp  tensor.cpp  tensor_matmul_cpu.cpp  tensor_operators_cpu.cpp  threading.cpp  unpack_data_cpu.cpp
test/unittests/: CMakeLists.txt  context.cpp  core_tensor_logic.cpp  prelude.hpp
test/unittests/core/: context.cpp  file_storage.cpp  hashmap.cpp  misc.cpp  opp.cpp
test/unittests/cpu/: binary_operators.cpp  convert_e5m10.cpp  tensor_bin_ops.cpp  tensor_data_access.cpp  tensor_init_ops.cpp  transfer_format.cpp
test/unittests/models/: xor.cpp
test/unittests/tensor/: autograd.cpp  binary_operators.cpp  core_logic.cpp  data_access.cpp  indexing.cpp  init_operators.cpp  unary_operators.cpp
test_data/: test.magnetron  test.wavelet
tools/: cpugov_setperf.sh  install_deps_linux.sh
(+10 files in other folders)
