[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magnetron"
version = "0.1.0"
authors = [
    {name = "Mario Sieg", email = "mario.sieg.64@gmail.com"},
]
description = "A lightweight machine learning library with GPU support."
readme = "README.md"
dependencies = ["cffi"]

[project.optional-dependencies]
# Optional dev dependencies for development and testing of Magnetron itself (don't install these when using Magnetron as a library)
dev = [
    "pytest",               # For testing
    "matplotlib",           # For plotting results
    "sphinx",               # Documentation generation
    "sphinx-autoapi",       # Documentation generation
    "sphinx-rtd-theme",     # Documentation theme
    "torch",                # Will be removed in the future
    "numpy",                # In generally optional, but Magnetron provides some extension if installed
    "ruff",                 # Linter
    "pillow",               # Required by the dataset_converter to load tensors
    "pyqt5",                # Required by the dataset_explorer for the GUI
    "twine"                 # For uploading to PyPI
]

# Optional dependencies for complex examples (install if you want to run the examples)
examples = ["numpy", "matplotlib", "django", "tqdm", "scipy"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
ignore = ["F403"]
select = ["ANN"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"setup.py" = ["ANN"]